<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/bim_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_cal_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:layout_marginEnd="24dp"
                />

            <EditText
                android:id="@+id/name_ed"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name_input"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/height_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_label" />

            <EditText
                android:id="@+id/height_ed"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/height_input"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_label" />

            <EditText
                android:id="@+id/weight_ed"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/weight_input"
                android:textSize="20sp"/>
        </TableRow>

        <Button
            android:id="@+id/cal_BMI_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_cal_btn"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/bmi_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_label" />

            <EditText
                android:id="@+id/bmi_ed"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:hint="0"
                android:textSize="22sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/diagnostic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia_label" />

            <EditText
                android:id="@+id/diagnostic_ed"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:hint="None"
                android:textSize="22sp"/>
        </TableRow>

    </TableLayout>
</RelativeLayout>